<resources>

    <string name="app_name">Schimpfmeister</string>
    <string name="app_untertitel">Schimpfwortgenerator</string>

    <string name="ueber_titel">Über Schimpfmeister</string>
    <string name="ueber_text">Diese App verwendet für die Erzeugung der Beschimpfungen den
        Algorithmus und die Wortlisten von Schimpfolino.
        \n\nAchtung: Die als Favoriten markierten Schimpfwörter werden nicht über einen Neustart
        der App hinaus persistiert.
        \n\nDie App kann %1$,d verschiedene Schimpfwörter erzeugen.
        \n\nApp erzeugt am:\n%2$s.
    </string>

    <string name="favorit_hinzugefuegt">Favorit hinzugefügt, es gibt jetzt %d Favoriten.</string>

    <string name="actionbar_ueber_dieses_app">Über diese App</string>
    <string name="actionbar_hilfe">Hilfe</string>
    <string name="actionbar_favoriten_anzeigen">Gemerkte Schimpfwörter anzeigen</string>
    <string name="actionbar_neu">Neues Schimpfwort</string>
    <string name="actionbar_merken">Schimpfwort merken</string>

    <string name="button_ok">OK</string>
    <string name="button_schimpfolino_besuchen">Schimpfolino besuchen</string>

    <!-- Texte für FavoritenActivity -->
    <string name="button_zurueck">Zurück</string>
    <string name="activit_titel_favoriten">Gemerkte Schimpfwörter (%d)</string>

</resources>